3_ecodesign/monitoring_stack/powerapi_helm/prometheus_ingress.yaml
apiVersion:  traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-stack-kube-prom-prometheus
  namespace: monitoring
spec:
  routes:
  - kind: Rule
    match: Host(`prometheus.kubernetes`)
    # middlewares:
    # - name: cors-all
    #   namespace: default
    services:
    - kind: Service
      name: prometheus-stack-kube-prom-prometheus
      namespace: monitoring
      port: 9090
      scheme: http
